--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.0.4",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "youtube-sr": "^4.1.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
